--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "version": "0.0.0",
   "scripts": {
     "build": "shopify hydrogen build",
-    "dev": "shopify hydrogen dev",
+    "dev": "shopify hydrogen dev --codegen-unstable",
     "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
     "typecheck": "tsc --noEmit",
-    "test": "jest --watchAll",
+    "test": "jest --collectCoverage",
     "jest-preview": "jest-preview",
     "test:preview": "npm-run-all -p test jest-preview",
     "test:coverage": "jest --coverage"
