--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
     "typecheck": "tsc --noEmit",
-    "test": "jest --collectCoverage",
+    "test": "jest --collectCoverage --watchAll",
     "jest-preview": "jest-preview",
     "test:preview": "npm-run-all -p test jest-preview",
     "test:coverage": "jest --coverage"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@remix-run/react": "1.17.1",
+    "@remix-run/node": "^1.18.0",
+    "@remix-run/react": "1.18.0",
+    "@remix-run/router": "^1.7.0",
     "@shopify/cli": "3.46.5",
     "@shopify/cli-hydrogen": "^5.0.1",
     "@shopify/hydrogen": "^2023.4.5",
@@ -28,7 +30,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.17.1",
+    "@remix-run/dev": "1.18.0",
+    "@remix-run/testing": "^1.18.0",
     "@shopify/oxygen-workers-types": "^3.17.2",
     "@shopify/prettier-config": "^1.1.2",
     "@swc/core": "^1.3.66",
